<resources>
    <string name="app_name">RikuriApp</string>
    <string name="logo">LOGO</string>
    <string name="button">Register</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="kingdom_name">Kingdom Name</string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Login</string>
    <string name="user_kingdom_name">Username</string>
    <string name="createTroopBtn">Create new troop</string>
    <string name="troops">Upgrade Troops</string>
    <string name="upgradeBuildings">Upgrade Buildings</string>
    <string name="createBuildingBtn">Create new building</string>

</resources>