<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
  tools:context=".Login">

  <Button
      android:id="@+id/createTroopBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="160dp"
      android:layout_marginLeft="160dp"
      android:layout_marginEnd="160dp"
      android:layout_marginRight="160dp"
      android:layout_marginBottom="80dp"
      android:background="@drawable/rounded_corners"
      android:clickable="true"
      android:hint="@string/loginButton"
      android:lineSpacingExtra="10sp"
      android:textColor="#1A0202"
      android:textColorHint="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/loginPasswordEditTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="62dp"
      android:background="#99009688"
      android:ems="10"
      android:inputType="textPassword"
      android:textSize="24sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/thirdTxt2" />

  <TextView
      android:id="@+id/thirdTxt2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="62dp"
      android:layout_marginTop="20dp"
      android:background="#99009688"
      android:text="@string/password"
      android:textColor="#110202"
      android:textSize="24sp"
      android:textStyle="bold"
      android:visibility="visible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginNameEditTxt" />

  <EditText
      android:id="@+id/loginNameEditTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="62dp"
      android:autofillHints=""
      android:background="#99009688"
      android:ems="10"
      android:textSize="24sp"
      android:visibility="visible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/fstTxt4" />

  <TextView
      android:id="@+id/fstTxt4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="62dp"
      android:layout_marginTop="30dp"
      android:background="#99009688"
      android:text="@string/username"
      android:textColor="#110202"
      android:textSize="24sp"
      android:textStyle="bold"
      android:visibility="visible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginscrn2" />

  <TextView
      android:id="@+id/loginscrn2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginStart="95dp"
      android:layout_marginLeft="95dp"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="95dp"
      android:layout_marginRight="95dp"
      android:background="@drawable/rounded_corners"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:text="Login"
      android:textColor="#000000"
      android:textSize="40sp"
      android:textStyle="bold"
      android:typeface="normal"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>